k8s/tls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-tls
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "grpc-tls-backendconfig"}'
  labels:
    app: grpc-server-tls
spec:
  type: ClusterIP
  selector:
    app: grpc-server-tls
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: grpc
    appProtocol: HTTPS
